--- a/app/modules/frameworkImport/templates/frameworkImportSummary.hbs
+++ b/app/modules/frameworkImport/templates/frameworkImportSummary.hbs
@@ -44,7 +44,7 @@
               <td class="left" scope="col">{{name}}</td>
               <td scope="col">{{versions.[0]}}</td>
               <td scope="col">{{versions.[1]}}</td>
-              <td scope="col">{{statusText}}</td>
+              <td scope="col">{{t statusKey}}</td>
             </tr>
           {{/each}}
         </tbody>
