--- a/app/modules/appHeader/less/appHeader.less
+++ b/app/modules/appHeader/less/appHeader.less
@@ -7,6 +7,40 @@
 @app-header-logo-display: none;
 @app-header-logo-url: none;
 
+#loading-subtle {
+  width: 100%;
+  margin: auto;
+  position: absolute;
+  top: 60px;
+}
+
+.progress-bar {
+  height: 4px;
+  background-color: rgba(5, 114, 206, 0.2);
+  width: 100%;
+  overflow: hidden;
+}
+
+.progress-bar-value {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(5, 114, 206, 0.3);
+  animation: indeterminateAnimation 3s infinite linear;
+  transform-origin: 0% 50%;
+}
+
+@keyframes indeterminateAnimation {
+  0% {
+    transform:  translateX(0) scaleX(0);
+  }
+  40% {
+    transform:  translateX(0) scaleX(0.4);
+  }
+  100% {
+    transform:  translateX(100%) scaleX(0.5);
+  }
+}
+
 .appHeader {
   position:fixed;
   top:0px;
