Add git data to index

--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-adapt-framework-version="{{versions.adapt_framework}}" data-adapt-authoring-version="{{versions.adapt-authoring}}">
+<html lang="en" data-adapt-framework-version="{{versions.adapt_framework}}" data-adapt-authoring-version="{{versions.adapt-authoring}}" data-adapt-authoring-branch="{{git.adapt-authoring.branch}}" data-adapt-authoring-commit="{{git.adapt-authoring.commit}}">
   <head>
     <title>{{productName}}</title>
     <link rel="icon" type="image/png" href="/css/assets/favicon.png" />
