Add table colour

--- a/app/modules/frameworkImport/less/frameworkImport.less
+++ b/app/modules/frameworkImport/less/frameworkImport.less
@@ -51,7 +51,7 @@
         }
         .left { text-align: left; }
       }
-      tr.UPDATE_BLOCKED { color: @color-error; }
+      tr.UPDATE_BLOCKED, tr.INVALID { color: @color-error; }
       tr.INSTALLED { color: @color-info; }
       tr.UPDATED { color: @color-success; }
       tr.OLDER { color: @color-warn; }
