Add CKEditor plugin

--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -45,7 +45,6 @@
 		</script>
     <script type="module">
       import {
-        ClassicEditor,
         AccessibilityHelp,
         Alignment,
         Autoformat,
@@ -58,6 +57,7 @@
         Bold,
         CKBox,
         CKBoxImageEdit,
+        ClassicEditor,
         Clipboard,
         CloudServices,
         Code,
@@ -65,6 +65,7 @@
         Essentials,
         FindAndReplace,
         Font,
+        GeneralHtmlSupport,
         Heading,
         Highlight,
         HorizontalLine,
@@ -136,6 +137,7 @@
         Essentials,
         FindAndReplace,
         Font,
+        GeneralHtmlSupport,
         Heading,
         Highlight,
         HorizontalLine,
