--- a/app/modules/editor/global/templates/partials/part_editorCommon.hbs
+++ b/app/modules/editor/global/templates/partials/part_editorCommon.hbs
@@ -3,7 +3,7 @@
     <button class="editor-common-sidebar-preview action-primary">
       <span class="editor-common-sidebar-preview-inner">{{ t 'app.preview'}}</span>
       <span class="editor-common-sidebar-previewing display-none">
-        <i class="fa fa-circle-o-notch fa-spin"></i>{{ t 'app.previewing'}}
+        <i class="fa fa-circle-o-notch fa-spin">{{ t 'app.previewing'}}</i>
       </span>
     </button>
   </div>
@@ -11,7 +11,7 @@
   <button class="editor-common-sidebar-download action-secondary">
     <span class="editor-common-sidebar-download-inner">{{ t 'app.download'}}</span>
     <span class="editor-common-sidebar-downloading display-none">
-      <i class="fa fa-circle-o-notch fa-spin"></i>{{ t 'app.downloading'}}
+      <i class="fa fa-circle-o-notch fa-spin">{{ t 'app.downloading'}}</i>
     </span>
   </button>
 
@@ -19,7 +19,7 @@
   <button class="editor-common-sidebar-export action-secondary">
     <span class="editor-common-sidebar-export-inner">{{ t 'app.export'}}</span>
     <span class="editor-common-sidebar-exporting display-none">
-      <i class="fa fa-circle-o-notch fa-spin"></i>{{ t 'app.exporting'}}
+      <i class="fa fa-circle-o-notch fa-spin">{{ t 'app.exporting'}}</i>
     </span>
   </button>
   {{/ifHasScopes}}
@@ -29,7 +29,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-project">
       <span class="editor-common-sidebar-project-inner">
-        <i class="fa fa-chevron-right primary-color"/>{{ t 'app.editorsettings'}}
+        <i class="fa fa-chevron-right primary-color">{{ t 'app.editorsettings'}}</i>
       </span>
     </button>
   </div>
@@ -37,7 +37,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-config">
       <span class="editor-common-sidebar-config-inner">
-        <i class="fa fa-chevron-right primary-color"/>{{ t 'app.configurationsettings'}}
+        <i class="fa fa-chevron-right primary-color">{{ t 'app.configurationsettings'}}</i>
       </span>
     </button>
   </div>
@@ -45,7 +45,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-select-theme">
       <span class="editor-common-sidebar-select-theme-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editorselecttheme'}}
+        <i class="fa fa-chevron-right primary-color">{{ t 'app.editorselecttheme'}}</i>
       </span>
     </button>
   </div>
@@ -53,7 +53,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-menusettings">
       <span class="editor-common-sidebar-menusettings-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.editorselectmenu'}}
+        <i class="fa fa-chevron-right primary-color">{{ t 'app.editorselectmenu'}}</i>
       </span>
     </button>
   </div>
@@ -61,7 +61,7 @@
   <div class="sidebar-row">
     <button class="editor-common-sidebar-extensions">
       <span class="editor-common-sidebar-extensions-inner">
-        <i class="fa fa-chevron-right primary-color"/></i>{{ t 'app.manageextensions'}}
+        <i class="fa fa-chevron-right primary-color">{{ t 'app.manageextensions'}}</i>
       </span>
     </button>
   </div>
