Fix asset duration display in template
Fixes #350

--- a/app/modules/assetManagement/templates/assetManagementPreview.hbs
+++ b/app/modules/assetManagement/templates/assetManagementPreview.hbs
@@ -25,7 +25,7 @@
   <div class="asset-size">{{t 'app.assetsize'}}: {{{bytesToSize size}}}</div>
 
   {{#if duration}}
-    <div class="asset-duration break">{{t 'app.assetduration'}}: {{{formatDuration metadata.duration}}}</div>
+    <div class="asset-duration break">{{t 'app.assetduration'}}: {{{formatDuration duration}}}</div>
   {{/if}}
 
   {{#if resolution}}
