Fix component icon URLs

--- a/app/modules/editor/contentObject/less/editorPageComponentList.less
+++ b/app/modules/editor/contentObject/less/editorPageComponentList.less
@@ -187,47 +187,47 @@
     float: left;
     margin: 5px 20px 0 0;
     background-repeat: no-repeat;
-    background-image: url("assets/icon-default.png");
+    background-image: url("assets/component-icons/icon-default.png");
     // core components, override above
     &.adapt-contrib- {
       &assessmentResults {
-        background-image: url("assets/icon-assessment.png");
+        background-image: url("assets/component-icons/icon-assessment.png");
       }
       &blank {
-        background-image: url("assets/icon-blank.png");
+        background-image: url("assets/component-icons/icon-blank.png");
       }
       &accordion {
-        background-image: url("assets/icon-accordion.png");
+        background-image: url("assets/component-icons/icon-accordion.png");
       }
       &graphic {
-        background-image: url("assets/icon-graphic.png");
+        background-image: url("assets/component-icons/icon-graphic.png");
       }
       &gmcq {
-        background-image: url("assets/icon-gmcq.png");
+        background-image: url("assets/component-icons/icon-gmcq.png");
       }
       &hotgraphic {
-        background-image: url("assets/icon-hot-graphic.png");
+        background-image: url("assets/component-icons/icon-hot-graphic.png");
       }
       &matching {
-        background-image: url("assets/icon-matching.png");
+        background-image: url("assets/component-icons/icon-matching.png");
       }
       &media {
-        background-image: url("assets/icon-media.png");
+        background-image: url("assets/component-icons/icon-media.png");
       }
       &mcq {
-        background-image: url("assets/icon-mcq.png");
+        background-image: url("assets/component-icons/icon-mcq.png");
       }
       &narrative {
-        background-image: url("assets/icon-narrative.png");
+        background-image: url("assets/component-icons/icon-narrative.png");
       }
       &slider {
-        background-image: url("assets/icon-slider.png");
+        background-image: url("assets/component-icons/icon-slider.png");
       }
       &text {
-        background-image: url("assets/icon-text.png");
+        background-image: url("assets/component-icons/icon-text.png");
       }
       &textInput {
-        background-image: url("assets/icon-text.png");
+        background-image: url("assets/component-icons/icon-text.png");
       }
     }
   }
