Add local Google Fonts

--- a/app/core/less/fonts.less
+++ b/app/core/less/fonts.less
@@ -1,4 +1,30 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:@{font-weight},@{font-weight-bold}|Raleway:@{font-weight},@{font-weight-bold}');
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./OpenSans-400.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./OpenSans-700.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./Raleway-400.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./Raleway-700.woff2') format('woff2');
+}
 
 @font-title: 'Raleway', sans-serif;
 @font-family: 'Open Sans', sans-serif;
