Fix local fonts
Fixes #391

--- a/app/core/less/fonts.less
+++ b/app/core/less/fonts.less
@@ -2,28 +2,28 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('./OpenSans-400.woff2') format('woff2');
+  src: url('/fonts/OpenSans-400.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src: url('./OpenSans-700.woff2') format('woff2');
+  src: url('/fonts/OpenSans-700.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: url('./Raleway-400.woff2') format('woff2');
+  src: url('/fonts/Raleway-400.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
-  src: url('./Raleway-700.woff2') format('woff2');
+  src: url('/fonts/Raleway-700.woff2') format('woff2');
 }
 
 @font-title: 'Raleway', sans-serif;
