Add max-height to swal2-html-container

--- a/app/modules/notify/plugins/alert/less/alert.less
+++ b/app/modules/notify/plugins/alert/less/alert.less
@@ -30,6 +30,9 @@
       font-size: 115%;
     }
   }
+  .swal2-html-container {
+    max-height: 300px;
+  }
   .swal2-icon {
     &.swal2-error {
       border-color: @alert-color;
